# shell-hydra

./: Cargo.toml  README.org  default.nix  entr.sh  fmt.sh  inotify-cargo.sh  shell.nix
conf/: config.json
nix/: 19.09.json  20.03-beta.json  nixpkgs.nix
src/: charin.rs  lib.rs  main.rs
