[package]
name = "shell_hydra"
version = "0.1.0"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
include = ["conf/"]

[lib]
name = "shell_hydra_lib"
path = "src/lib.rs"

[[bin]]
name = "shell_hydra"
path = "src/main.rs"

[dependencies]
console = "0.9"
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"